k8s/ext-authz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-authz-service
  namespace: gekko
spec:
  selector:
    app: ext-authz-service
  ports:
    - name: http
      port: 8080
      targetPort: http
